--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
   },
   "require": {
     "ext-pdo": "*",
-    "phpunit/phpunit": "^9.5"
+    "phpunit/phpunit": "^9.5",
+    "ext-http": "*"
   }
 }
